--- a/style.css
+++ b/style.css
@@ -119,3 +119,271 @@ nav button{
     padding : 15px 30px;
     cursor : pointer;
 }
+
+@media only screen and (max-width : 768px){
+    .logo {
+        font-size : 20px;
+    }
+    nav button {
+        padding : 5px 10px;
+    }
+
+    .lang {
+        padding : 4px 8px;
+    }
+    .header-content {
+        position: unset;   
+        transform: none;
+        padding-top: 150px;
+      }
+      .header-content h2 {
+        font-size: 48px;
+        line-height: 50px;
+      }
+      .header-content h3 {
+        font-size: 20px;
+      }
+      .add-email button {
+        font-size: 12px;
+        padding: 10px 15px;
+      }
+
+}
+
+
+.banner-content{
+    border-radius: 6px;
+    background-color: linear-gradient(to right, #651c3d 0%, #280a2b 60%);
+    padding : 40px;
+    margin-bottom : 40px;
+}
+
+#banner p{
+    font-size : 20px;
+    color : rgba(255, 255, 255, 0.7);
+    margin-bottom : 30px;
+}
+
+#banner button {
+    border : 0;
+    outline : 0;
+    border-radius : 5px;
+    background: rgba(128, 128, 128, 0.4);
+    padding : 10px 20px;
+    color : #fff;
+    font-size : 14px;
+    font-weight : 700;
+    cursor : pointer;
+}
+
+.select-menu {
+    border : 1px solid #fff;
+    background-color : transparent;
+    color : #fff;
+    padding : 10px 24px;
+    margin-top : 20px;
+    font-size : 16px;
+}
+
+.select-menu option {
+    background-color: #2b2b2b;
+    color : #fff;
+}
+
+.membership-content {
+    border-radius : 6px;
+    background : linear-gradient(to right, rgba(101, 28, 61, 0.9), rgba(40, 10, 43, 0.5) 60%), 
+    url(images/membership-bg.png) no-repeat right center;
+    padding : 60px 40px;
+    margin-bottom : 40px;
+}
+
+.choice-content{
+    display : flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap : 30px;
+}
+
+.card{
+    flex : 1;
+    border : 0;
+    outline : 0;
+    border-radius : 10px;
+    background : linear-gradient(to bottom, rgba(25, 32, 68, 1), rgba(32, 19, 34, 1) 62%);
+    padding :40px;
+    height : 300px;
+    position : relative;
+}
+
+.bean-img{
+    width : 80px;
+    position : absolute;
+    bottom : 20px;
+    right : 10px;
+}
+
+.bean-img img{
+    width : 100%;
+    height : auto;
+}
+
+
+@media only screen and (max-width: 768px) {
+    .card {
+      flex-basis: 100%;
+    }
+  }
+  @media only screen and (min-width: 769px) and (max-width: 1220px) {
+    .card {
+      flex-basis: calc(50% - 15px);
+    }
+  }
+
+  .faq .accordion {
+    width: 100%;
+    max-width: 750px;
+    margin: 60px auto;
+  }
+  .accordion li {
+    list-style: none;
+    width: 100%;
+    padding: 5px;
+  }
+  .accordion li label {
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    font-size: 25px;
+    font-weight: 500;
+    background: #303030;
+    margin-bottom :2px;
+    cursor: pointer;
+    position: relative;
+  }
+  .accordion li label::after {
+    content: '\2b';
+    font-size: 40px;
+    position: absolute;
+    right: 20px;  
+    transition: 0.5s;
+  }
+  .accordion input[type="radio"] {
+    display: none;
+  }
+  .accordion .content {
+    background: #3b3b3b;
+    font-size: 22px;
+    line-height: 1.6;
+    text-align: left;
+    padding: 0 20px;
+    max-height: 0;
+    overflow: hidden;
+  }
+  .accordion input[type="radio"]:checked + label + .content {  /* input[type="radio"]에 체크하면 */
+    max-height: 600px;
+    padding: 30px 20px;
+  }
+  .accordion input[type="radio"]:checked + label::after {  /* input[type="radio"]에 체크하면 */
+    transform: rotate(-135deg);
+  }
+  .newsletter {
+    padding: 20px 10%;
+  }
+
+
+  footer {
+    padding: 60px 10%;
+  }
+  .footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    gap: 30px;
+  }
+  .footer-content a {
+    color: rgba(255, 255, 255, 0.7);
+    font-size: 16px;
+    text-decoration: none;
+  }
+  .left {
+    flex-basis: 60%;
+  }
+  .center,
+  .right {
+    flex-basis: 20%;  
+    vertical-align: top;
+  }
+  .col h2 {
+    color: rgba(255, 255, 255, 0.7);
+    font-size: 32px;
+    margin-bottom: 20px;
+  }
+  .col h3 {
+    color: rgba(255, 255, 255, 0.7);
+    font-size: 26px;
+    margin-bottom: 20px;
+  }
+  .footer-nav {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: 20px;
+    list-style: none;
+    margin-bottom: 40px;
+  }
+  .footer-nav li:not(:last-child) {
+    padding-right: 20px;
+    border-right: 1px solid #eee;
+  }
+  .footer-info {
+    margin-top: 20px;
+    color: rgba(255, 255, 255, 0.7);
+  }
+  .socials {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: 10px;
+    list-style: none;
+  }
+  .socials a {
+    color: rgba(255, 255, 255, 0.7);
+    font-size: 16px;
+  }
+  .copyright {
+    margin-top: 20px;
+    color: rgba(255, 255, 255, 0.7);
+    font-size: 16px;
+  } 
+  .footer-content p {
+    font-size: 14px;
+    line-height: 0.6;
+    color: rgba(255, 255, 255, 0.7);
+    margin-bottom: 20px;
+  }
+  
+  /* ---- 반응형 (푸터) ---- */
+  @media only screen and (max-width: 768px) {
+    .footer-content {
+      display: flex;
+      flex-direction: column;
+    }
+    .col {
+      flex-basis: 100%;
+    }
+    .col h2 {
+      color: rgba(255, 255, 255, 0.7);
+      font-size: 28px;
+      margin-bottom: 20px;
+    }
+    .col h3 {
+      color: rgba(255, 255, 255, 0.7);
+      font-size: 18px;
+      margin-bottom: 20px;
+    }
+  }
+
+
+
+
